# stock-market-data-predictor-model

./: .env.example  README.MD  README.md  fill_in_gaps.py  fill_in_the_gaps.py  index.py  main.py  pyproject.toml  sentiment_data.py
Stock-Market-Web-App/: .gitignore  Readme.md  config.py  example.env  example_env.env  main.py  pyproject.toml  requirements.txt  run.py
datasets/: AAPL_1988.csv  AAPL_1989.csv  AAPL_1990.csv  AAPL_1991.csv  AAPL_1992.csv  AAPL_1993.csv  AAPL_1994.csv  AAPL_1995.csv  AAPL_1996.csv  AAPL_1997.csv  AAPL_1998.csv  AAPL_1999.csv  AAPL_2000.csv  AAPL_2001.csv  AAPL_2002.csv  AAPL_2003.csv  AAPL_2004.csv  AAPL_2005.csv  AAPL_2006.csv  AAPL_2007.csv  AAPL_2008.csv  AAPL_2009.csv  AAPL_2010.csv  AAPL_2011.csv  AAPL_2012.csv  AAPL_2013.csv  AAPL_2014.csv  AAPL_2015.csv  AAPL_2016.csv  AAPL_2017.csv  AAPL_2018.csv  AAPL_2019.csv  AAPL_2020.csv  AAPL_2021.csv  AAPL_2022.csv  AAPL_2023.csv  AAPL_2024.csv  AAPL_2025.csv  GOOG_2004.csv  GOOG_2005.csv  (+260 more)
datasets_fmp_free/: AAPL_2020.csv  AAPL_2021.csv  AAPL_2022.csv  AAPL_2023.csv  AAPL_2024.csv  AAPL_2025.csv  JPM_2020.csv  JPM_2021.csv  JPM_2022.csv  JPM_2023.csv  JPM_2024.csv  JPM_2025.csv  META_2020.csv  META_2021.csv  META_2022.csv  META_2023.csv  META_2024.csv  META_2025.csv  MSFT_2020.csv  MSFT_2021.csv  MSFT_2022.csv  MSFT_2023.csv  MSFT_2024.csv  MSFT_2025.csv  NVDA_2020.csv  NVDA_2021.csv  NVDA_2022.csv  NVDA_2023.csv  NVDA_2024.csv  NVDA_2025.csv  TSLA_2020.csv  TSLA_2021.csv  TSLA_2022.csv  TSLA_2023.csv  TSLA_2024.csv  TSLA_2025.csv  TSM_2020.csv  TSM_2021.csv  TSM_2022.csv  TSM_2023.csv  (+8 more)
(+55 files in other folders)
