[project]
name = "stock-market-data-predictor-model"
version = "0.1.0"
description = "Creating a 'heat number' that indicates if a company is going to introduce new stock volume"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "vadersentiment>=3.3.2",
    "yfinance>=0.2.66",
]
